<resources>
    <string name="app_name">Raksha</string>
    <string name="action_settings">Settings</string>
    <string name="common_reg_buildShop_proceed_text">Uploading... </string>
    <string name="common_ServerConnection">We are facing technical difficulties and will be back shortly , Please try after some time</string>
    <string name="common_checkNetConnection">please check your internet connection</string>
    <string name="name">Name</string>
    <string name="DOB">Date Of Birth:</string>
    <string name="employee_id">Employee Id</string>
    <string name="pan_adhaar">Pan/Adhaar No:</string>
    <string name="venue">Venue Details</string>
    <string name="schedule_timing">Schedule Your Date and Timings</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="submit">Submit</string>
    <string name="appoint_fixed">Your Appointment has been Fixed</string>
    <string name="your_details">Your Details</string>

    <string name="review_details">Review Your details</string>
    <string name="runtime_permissions_txt">please enable the permissions..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="locate_pharmacy"><u>Locate Pharmacy</u></string>
    <string name="Pathology"><u>Locate Pathology</u></string>
    <string name="radiology"><u>Locate Radiology</u></string>
    <string name="specialist"><u>Locate Specialist</u></string>
    <string name="hospital"><u>Locate Hospitalisation</u></string>

    <string-array name="General_Practioner">
        <item name="book_appoint">My Appointments</item>
        <item name="hosipital_visit">View History</item>

    </string-array>

    <string name="resenCodeStr"><u>RESEND CODE</u></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_custom_dialog">CustomDialogActivity</string>
    <string name="title_customdialog">Various Custom Dialogs</string>
    <string name="dl_simple_dialog">Simple Custom Dialog</string>
    <string name="dl_border_dialog">Custom Dialog with Border</string>
    <string name="dl_roundcorner_dialog">Custom Dialog with Round Corner</string>
    <string name="dl_roundcorner_border_dialog">Custom Dialog with Round Corner &amp; Border</string>
    <string name="title_text">Add Title Text</string>
    <string name="message">Alert Message...</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
